# demo-rust-axum

examples/axum_intro/: Cargo.toml
examples/axum_intro/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
examples/axum_intro/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
examples/axum_intro/tests/: quick_dev.rs
examples/tian/live/: Cargo.toml
examples/tian/live/src/: main.rs
examples/upload_file/: Cargo.toml
examples/upload_file/src/: main.rs
